--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
     <hr>
     <h4><a href="./public/hobbies.html">My Hobbies</a></h4>
         <h4><a href="./public/contact.html">Contact Me</a></h4>
-        </body>
+    
+        <article>
+        <footer>
+            <p>© Amir Khalil. All rights reserved.</p>
+        </footer>
+    </article>
+    </body>
 
 
 </html>
